GeneWeb version 3.05
--------------------

* GeneWeb Service/CGI (gwd)
  - [14 May 00] Added option "-images_url" to give an URL to GeneWeb
    images (flags, logo, background, up arrow). Can be useful e.g. in
    cgi mode if the associated Web server answers faster than gwd. By
    default, the GeneWeb images are sent by gwd.
  - [14 May 00] Fixed bug in update forms (person or family): in case of
    name conflict (name already used by another person), when clicking on
    the "return" button, the fields containing quotes ("), less (<) or
    greater (>) characters were truncated.
  - [12 May 00] In short dates (just year), if no death date, burial date
    is now displayed. And in pages displaying the ages at death, take now the
    baptism date if no birth date and the burial date if no death date to
    compute this age (then prefixed by "possibly")
  - [10 May 00] In personal pages, the links "ancestors" and "descendants"
    are proposed from 2 generations (instead of 3, before).
  - [06..11 May 00] Added surname list from "ancestors" page.
  - [02 May 00] [technical] In Unix version now, each request gets the
    user id and the group id of the owner of the data base directory
    (base.gwb). No error if cannot change to these ids. Deleted the gwd
    options -setuid and -setgid now unuseful.
  - [30 Apr 00] Fixed little problem with displaying by places for the ones
    containing several (at least two) indications between parentheses.

* Base configuration files (base.gwf)
  - [08 May 00] (detail) The possible trailing spaces or control-m are
    now stripped (allowing to move a base.gwf file from Windows to
    Unix without needing to remove them).

* Documentation
  - [06 May 00] Updated Swedish documentation (Lars Gustavsson).
  - [04 May 00] Added one item in FAQ about a possible problem in CGI mode.

GeneWeb version 3.04
--------------------

* Languages
  - [06 Apr 00] Added Afrikaans (Louis Kruger).

* Setup program (gwsetup)